# carburetor

./: CMakeLists.txt  analyze.js  compressed_symbol_supplier.cpp  compressed_symbol_supplier.h  config.json  main.cpp  memory.js  repo_source_line_resolver.cc  repo_source_line_resolver.h  repo_source_line_resolver_types.h
patches/: 0001-Ignore-invalid-modules-rather-than-bailing-on-the-en.patch  0002-Experimental-module-creation-for-JIT-memory.patch
selinux/: .gitignore  carburetor.fc  carburetor.if  carburetor.sh  carburetor.te  carburetor_selinux.spec
